fix problem with subtitle on smaller screens

--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -30,10 +30,10 @@
 .content a {
     color: #fcfcfc;
     font-family: 'Avenir Next';
-    font-size: 0.8rem;
+    font-size: 1rem;
     font-weight: bold;
     letter-spacing: 3px;
-    line-height: 16px;
+    line-height: 20px;
     text-align: center;
 }
 
